# codepack

./: .exportignore.example  .gitattributes  .gitignore  ProjectExporterDesktop.spec  README.md  SaveFilesContent.bat  build_and_install.bat  build_windows_exe.bat  build_windows_exe.py  main.py  pyproject.toml  requirements.txt  uninstall_project_exporter.bat
.github/workflows/: ci.yml
Desktop/text_merger/: .exportignore.example  .gitignore  README.md  build_windows_exe.bat
Desktop/text_merger/tests/: test_archive_metadata_hook.py  test_archive_service.py  test_copy_service.py  test_export_ignore.py  test_text_utils.py
Desktop/text_merger/tools/: build_exe.bat  build_exe.py
docs/: ARCHITECTURE.md  Project_Exporter_Desktop_TZ_EN.txt  Project_Exporter_Desktop_TZ_RU.txt  RELEASE.md  SECURITY.md  ДОРОЖНАЯ_КАРТА.md  ТЗ_v2.md
src/project_exporter_desktop/: __init__.py  __main__.py  config.py  constants.py  i18n.py  main.py  models.py  version.py
src/project_exporter_desktop/gui/: __init__.py  dialogs.py  logging.py  main_window.py  resources.py  workers.py
src/project_exporter_desktop/reports/: __init__.py  git_report.py  metadata.py  structure_report.py  text_dump_report.py
src/project_exporter_desktop/services/: __init__.py  analytics_service.py  archive_service.py  copy_service.py  diff_service.py  export_history.py  export_ignore.py  export_plan.py  export_policy.py  export_profiles.py  exporter.py  git_diff.py  incremental.py  progress.py  prompt_builder.py  risk_preview.py  stack_detector.py
src/project_exporter_desktop/ui/: app_window.py
src/project_exporter_desktop/utils/: __init__.py  inventory.py  path_utils.py  text_utils.py  (+2 more)
tests/: test_ai_presets.py  test_analytics_service.py  test_archive_metadata_hook.py  test_archive_service.py  test_config_edge_cases.py  test_copy_service.py  test_diff_service.py  test_export_ignore.py  test_export_ignore_edge_cases.py  test_export_plan.py  test_export_plan_edge_cases.py  test_export_policy.py  test_gui_structure.py  test_i18n.py  test_incremental.py  test_metadata_manifest.py  test_path_validation.py  test_report_generation.py  test_stack_detector.py  test_text_utils.py  test_token_counter.py  test_token_counter_edge_cases.py
tools/: build_exe.bat  build_exe.py  build_setup.bat  smoke_export.py  uninstall_project_exporter.ps1
(+75 files in other folders)
