[project]
name = "project-exporter-desktop"
version = "4.0.0"
description = "Safe desktop project exporter for AI/Codex handoff and code review."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
