[project]
name = "project-exporter-desktop"
version = "5.1.0"
description = "Safe Windows desktop project exporter for AI/Codex handoff and code review."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
project-exporter-desktop = "project_exporter_desktop.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
