# Project metadata plus test/lint configuration used by local checks and GitHub CI.

[project]
name = "project-exporter-desktop"
version = "1.0.0"
description = "Safe Windows desktop project exporter for AI/Codex handoff and code review."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
# Keep development tools optional so the runtime install stays small.
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
project-exporter-desktop = "project_exporter_desktop.main:main"

[tool.pytest.ini_options]
# Tests import the package directly from src/ without requiring an editable install.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
# Ruff is the CI gate for import ordering and basic Python safety/modernization rules.
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
